# niwid-db

./: .gitignore  .history  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md  askama.toml  bacon.toml
src/: lib.rs  main.rs
src/buffer_pool/: frame.rs  mod.rs  replacer.rs
src/catalog/: mod.rs
src/catalog/versioned_map/: mod.rs
src/context/: mod.rs  result_set.rs
src/deployment/: build.sh  deploy.sh  examples.rs  html_formatter.rs  main.rs
src/deployment/styles/: examples_sidebar.css  query_form.css  query_results.css  style.css  welcome.css
src/deployment/views/: additional_info.html  examples_sidebar.html  index.html  query_form.html  query_result.html  welcome.html
src/disk_manager/: mod.rs
src/errors/: mod.rs
src/execution/: mod.rs  result_set.rs
src/executor/: mod.rs  result_set.rs
src/index/: btree.rs  btree_index_iterator.rs  mod.rs
src/indexes/: mod.rs
src/indexes/b_plus_tree/: btree.rs  btree_index_iterator.rs  btree_iterator.rs  mod.rs
src/lambda/: html_formatter.rs  index.html  main.rs
src/lambda/styles/: additional_info.css
src/lambda/views/: additional_info.html  index.html  query_result.html  query_results.css  (+2 more)
src/latch/: mod.rs
src/local_server/: mod.rs
src/pages/: btree_index_page.rs  index_page.rs  latch.rs  mod.rs  table_page.rs  table_page_iterator.rs  traits.rs
src/sql/: mod.rs  parser.rs
src/sqllogictest/: README.md  mod.rs
src/table/: mod.rs  table_iterator.rs
src/tuple/: constraints.rs  mod.rs  schema.rs  types.rs
src/txn_manager/: mod.rs
src/types/: mod.rs
src/versioned_map/: mod.rs
(+17 files in other folders)
