[package]
name = "idk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
lazy_static = "1.5.0"
parking_lot = {version = "0.12.3", features = ["deadlock_detection"]}
priority-queue = "2.1.0"
serde = {version = "1.0.210", features = ["derive"]}
sqlparser = "0.51.0"
uuid = {version = "1.10.0", features = ["fast-rng", "v4", "macro-diagnostics"]}
