[package]
name = "idk"
version = "0.2.0"
edition = "2021"
default-run = "idk-server"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
priority-queue = "2.1.0"
serde = {version = "1.0.210", features = ["derive"]}
sqlparser = "0.51.0"
backtrace = "0.3.74"
tokio = {version = "1.40.0", features = ["net", "io-util", "rt-multi-thread", "macros"]}
arrayvec = "0.7.6"
serde_json =  {version = "1.0.134" }
lambda_runtime =  {version = "0.13.0", features = ["anyhow"] }
lambda_http = {version = "0.14.0", features = ["apigw_http"] }

[[bin]]
name = "idk-lambda"
path = "src/lambda/main.rs"

[[bin]]
name = "idk-server"
path = "src/main.rs"

[dev-dependencies]
rand = "0.8.5"
sqllogictest = "0.22.0"
uuid = {version = "1.10.0", features = ["fast-rng", "v4", "macro-diagnostics"]}
